Fix notification dropdown on small displays (#203)
* Fix notification dropdown on small displays

* User bootstrap as module

* Add scrollbar to notifications

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import 'bootstrap/scss/bootstrap';
+
 .navbar-brand img {
   width: 3rem;
 }
@@ -31,4 +34,14 @@ main {
   width: 1.5rem;
   border-radius: .25rem;
   border: 1px solid #333;
+}
+
+.notification-dropdown .dropdown-menu {
+  max-height: 20rem;
+}
+
+@include media-breakpoint-up(lg) {
+  .notification-dropdown .dropdown-menu {
+    width: 25rem;
+  }
 }
